test/fixtures/typecheck/pass/T6.kite
module T6

import T5 {Semigroup, append}

type Foo { Empty, MkFoo }

semigroupFoo : Semigroup Foo { Semigroup [append: appendFoo] }

appendFoo : Foo -> Foo -> Foo { match {
  Empty, f -> f,
  MkFoo, _ -> MkFoo
}
}

foo1 : Foo { MkFoo }

foo2 : Foo { append semigroupFoo Empty MkFoo }
